--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Jayesh9421/company_site",
+  "homepage": "https://Jayesh9421.github.io/company_site",
   "name": "rangragini",
   "private": true,
   "version": "0.0.0",
